--- a/style.css
+++ b/style.css
@@ -9,6 +9,130 @@ a {
 }
 
 .center {
-  padding-left: 120px;
-  padding-right: 120px;
+  padding-left: calc(50% - 600px);
+  padding-right: calc(50% - 600px);
+}
+
+body {
+  font-family: "Montserrat", serif;
+}
+
+.top {
+  background-color: #E1FF8F;
+}
+.top__title {
+  padding-top: 196px;
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 78px;
+  color: #202027;
+  max-width: 769px;
+  padding-bottom: 24px;
+}
+.top__subtitle {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 32px;
+  padding-bottom: 48px;
+}
+.top__subtitle_bold {
+  font-weight: 600;
+}
+.top__btn {
+  box-sizing: border-box;
+  width: 247px;
+  height: 66px;
+  border-radius: 60px;
+  background-color: #202027;
+  color: #FFFFFF;
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 156px;
+}
+
+.nav {
+  height: 90px;
+  background-color: #BCEC30;
+}
+
+.main {
+  background-color: #202027;
+}
+
+.about {
+  padding-bottom: 144px;
+}
+.about__title {
+  color: #FFFFFF;
+  font-size: 64px;
+  font-weight: 700;
+  padding-top: 94px;
+}
+.about__subtitle {
+  color: #FFFFFF;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 32px;
+  margin-bottom: 72px;
+}
+
+.games {
+  -moz-column-gap: 32px;
+       column-gap: 32px;
+  row-gap: 32px;
+}
+
+.games {
+  display: flex;
+  flex-wrap: wrap;
+  -moz-column-gap: 32px;
+       column-gap: 32px;
+  row-gap: 32px;
+}
+.games__item {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 473px;
+  width: 378px;
+  background-color: #FFFFFF;
+  border-radius: 30px;
+}
+.games__item_big {
+  height: 551px;
+}
+.games__img {
+  max-width: 100%;
+}
+.games__btn {
+  width: 107px;
+  height: 36px;
+  color: #202027;
+  background-color: #F7F7F7;
+  border-radius: 52px;
+  font-size: 17px;
+  font-weight: 500;
+  margin-top: 32px;
+  margin-bottom: 16px;
+  margin-left: 32px;
+}
+.games__name {
+  color: #202027;
+  font-size: 30px;
+  font-weight: 700;
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+.footer {
+  height: 150px;
+  background-color: #E1FF8F;
+  display: flex;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.footer__text {
+  font-size: 24px;
+  font-weight: 600;
 }/*# sourceMappingURL=style.css.map */
