added anchor link

--- a/_vars.scss
+++ b/_vars.scss
@@ -32,4 +32,5 @@ $line-height-xxlarge: 78px;
     color: $secondary-color;
     font-size: $font-size-medium;
     font-weight: $font-weight-semibold;
+    cursor: pointer;
 }
