--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ body {
 
 .top {
   background-color: #E1FF8F;
+  background-image: url(images/Group.png);
+  background-repeat: no-repeat;
+  background-position: right 0 top 0;
 }
 .top__title {
   padding-top: 196px;
@@ -75,12 +78,6 @@ body {
   font-weight: 400;
   line-height: 32px;
   margin-bottom: 72px;
-}
-
-.games {
-  -moz-column-gap: 32px;
-       column-gap: 32px;
-  row-gap: 32px;
 }
 
 .games {
