--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@ body {
   font-weight: 600;
 }
 .top__btn {
+  display: inline-block;
+  text-align: center;
+  padding-top: 16px;
   box-sizing: border-box;
   width: 247px;
   height: 66px;
@@ -83,26 +86,25 @@ body {
 .games {
   display: flex;
   flex-wrap: wrap;
-  -moz-column-gap: 32px;
-       column-gap: 32px;
-  row-gap: 32px;
+  gap: 32px;
 }
-.games__item {
+
+.game {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  height: 473px;
   width: 378px;
   background-color: #FFFFFF;
   border-radius: 30px;
+  height: 100%;
+  flex-grow: 1;
 }
-.games__item_big {
-  height: 551px;
-}
-.games__img {
+.game__img {
   max-width: 100%;
 }
-.games__btn {
+.game__btn {
+  text-align: center;
+  padding-top: 8px;
   width: 107px;
   height: 36px;
   color: #202027;
@@ -114,12 +116,18 @@ body {
   margin-bottom: 16px;
   margin-left: 32px;
 }
-.games__name {
+.game__name {
   color: #202027;
   font-size: 30px;
   font-weight: 700;
   padding-left: 32px;
   padding-right: 32px;
+  padding-bottom: 36px;
+}
+
+.game:nth-child(4),
+.game:nth-child(6) {
+  margin-top: -32px;
 }
 
 .footer {
