--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,7 @@ body {
     background-image: url(images/Group.png);
     background-repeat: no-repeat;
     background-position: right 0 top 0;
+
     &__title {
         padding-top: 196px;
         font-size: $font-size-xxlarge;
@@ -47,6 +48,9 @@ body {
 
 
     &__btn {
+        display: inline-block;
+        text-align: center;
+        padding-top: 16px;
         @include button-style;
         margin-bottom: 156px;
     }
@@ -84,28 +88,26 @@ body {
 .games {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 32px;
-    row-gap: 32px;
+    gap: 32px;
+}
 
-    &__item {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        height: 473px;
-        width: 378px;
-        background-color: $secondary-color;
-        border-radius: 30px;
-
-        &_big {
-            height: 551px;
-        }
-    }
+.game {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 378px;
+    background-color: $secondary-color;
+    border-radius: 30px;
+    height: 100%;
+    flex-grow: 1;
 
     &__img {
         max-width: 100%;
     }
 
     &__btn {
+        text-align: center;
+        padding-top: 8px;
         width: 107px;
         height: 36px;
         color: $primary-color;
@@ -124,7 +126,12 @@ body {
         font-weight: $font-weight-bold;
         padding-left: 32px;
         padding-right: 32px;
+        padding-bottom: 36px;
     }
+}
+.game:nth-child(4),
+.game:nth-child(6) {
+    margin-top: -32px;
 }
 
 .footer {
