--- a/_vars.scss
+++ b/_vars.scss
@@ -9,6 +9,7 @@ $font-size-very-small: 16px;
 $font-size-medium: 24px;
 $font-size-big: 30px;
 $font-size-xbig: 32px;
+$mob-font-large: 40px;
 $font-size-xlarge: 48px;
 $font-size-xxlarge: 64px;
 
@@ -18,6 +19,7 @@ $font-weight-semibold: 600;
 $font-weight-bold: 700;
 
 $line-height-very-small: 17px;
+$line-height-small: 19px;
 $line-height-medium: 32px;
 $line-height-big: 39px;
 $line-height-xlarge: 58px;
@@ -31,6 +33,17 @@ $line-height-xxlarge: 78px;
     background-color: $primary-color;
     color: $secondary-color;
     font-size: $font-size-medium;
+    font-weight: $font-weight-semibold;
+    cursor: pointer;
+}
+@mixin mob-button-style {
+    box-sizing: border-box;
+    width: 285px;
+    height: 55px;
+    border-radius: 60px;
+    background-color: $primary-color;
+    color: $secondary-color;
+    font-size: $font-size-very-small;
     font-weight: $font-weight-semibold;
     cursor: pointer;
 }
