--- a/style.css
+++ b/style.css
@@ -80,6 +80,10 @@ body {
   margin-bottom: 72px;
 }
 
+.about-mob {
+  display: none;
+}
+
 .games {
   display: flex;
   flex-wrap: wrap;
@@ -118,7 +122,6 @@ body {
   font-size: 30px;
   font-weight: 700;
   padding-left: 32px;
-  padding-right: 32px;
   padding-bottom: 36px;
 }
 .game__desc {
@@ -151,8 +154,22 @@ body {
     padding-left: 16px;
     padding-right: 16px;
   }
+  .top {
+    text-align: center;
+  }
+  .top__title {
+    font-size: 40px;
+  }
   .about {
     display: none;
+  }
+  .about-mob {
+    display: block;
+    font-size: 40px;
+    font-weight: 700;
+    color: #FFFFFF;
+    padding-top: 48px;
+    padding-bottom: 48px;
   }
   .game {
     width: 343px;
@@ -174,5 +191,21 @@ body {
     font-size: 16px;
     font-weight: 600;
     cursor: pointer;
+  }
+  .game__name {
+    padding-top: 29px;
+    padding-left: 29px;
+    padding-bottom: 16px;
+  }
+  .game__desc {
+    padding-left: 29px;
+    padding-bottom: 32px;
+  }
+  .game__mob-btn {
+    margin-left: 29px;
+    margin-bottom: 32px;
+  }
+  .game:nth-child(4), .game:nth-child(6) {
+    margin-top: 0px;
   }
 }/*# sourceMappingURL=style.css.map */
