--- a/style.scss
+++ b/style.scss
@@ -82,6 +82,9 @@ body {
         margin-bottom: 72px;
     }
 }
+.about-mob{
+    display: none;
+}
 
 .games {
     display: flex;
@@ -123,7 +126,6 @@ body {
         font-size: $font-size-big;
         font-weight: $font-weight-bold;
         padding-left: 32px;
-        padding-right: 32px;
         padding-bottom: 36px;
     }
     &__desc{
