--- a/_mobile.scss
+++ b/_mobile.scss
@@ -24,6 +24,9 @@
         padding-top: 48px;
         padding-bottom: 48px;
     }
+    .games{
+        padding-bottom: 48px;
+    }
 
     .game {
         width: 343px;
