--- a/style.css
+++ b/style.css
@@ -171,6 +171,9 @@ body {
     padding-top: 48px;
     padding-bottom: 48px;
   }
+  .games {
+    padding-bottom: 48px;
+  }
   .game {
     width: 343px;
   }
