--- a/_mobile.scss
+++ b/_mobile.scss
@@ -5,6 +5,25 @@
     }
 
     .top {
+        background-image: 
+                    url(images/Star-mob.svg),
+                    url(images/Star\ 3.svg),
+                    url(images/Star\ 2.svg),
+                    url(images/Star\ 5.svg),
+                    url(images/Star\ 4.svg);
+    background-repeat: no-repeat;
+    background-position: 
+                        right 0px top 0px,
+                        left 91px top 64px,
+                        left 37px top 97px,
+                        right 86px bottom 74px,
+                        right 34px bottom 28px;
+    background-size:
+                    auto,
+                    21px 21px,
+                    35px 35px,
+                    18px 18px,
+                    39px 41px;                    
         text-align: center;
 
         &__title {
