added images for main

--- a/_mobile.scss
+++ b/_mobile.scss
@@ -30,6 +30,9 @@
             font-size: $mob-font-large;
         }
     }
+    .main{
+        background-image: none;
+    }
 
     .about {
         display: none;
