--- a/style.css
+++ b/style.css
@@ -57,7 +57,14 @@ body {
   font-size: 24px;
   font-weight: 600;
   cursor: pointer;
+  border: 1px solid #202027;
+  transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
   margin-bottom: 156px;
+}
+.top__btn:hover {
+  background-color: #FFFFFF;
+  color: #202027;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
 }
 
 .nav {
@@ -77,6 +84,7 @@ body {
   font-size: 64px;
   font-weight: 700;
   padding-top: 94px;
+  padding-bottom: 24px;
 }
 .about__subtitle {
   color: #FFFFFF;
@@ -105,6 +113,12 @@ body {
   background-color: #FFFFFF;
   border-radius: 30px;
   height: 100%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.game:hover {
+  transform: scale(1.1);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 .game__img {
   max-width: 100%;
@@ -207,6 +221,13 @@ body {
     font-size: 16px;
     font-weight: 600;
     cursor: pointer;
+    border: 1px solid #202027;
+    transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+  }
+  .game__mob-btn:hover {
+    background-color: #FFFFFF;
+    color: #202027;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   }
   .game__name {
     padding-top: 29px;
