--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
   text-align: center;
   padding-top: 16px;
   box-sizing: border-box;
+  font: inherit;
   width: 247px;
   height: 66px;
   border-radius: 60px;
@@ -74,9 +75,9 @@ body {
 
 .main {
   background-color: #202027;
-  background-image: url(images/Star\ 1.svg), url(images/Star\ 11.svg), url(images/Star\ 12.svg);
+  background-image: url(images/Star\ 1.svg), url(images/Star\ 11.svg), url(images/Star\ 12.svg), url(images/Star\ 7.svg), url(images/Star\ 6.svg), url(images/Star\ 10.svg), url(images/Star\ 8.svg);
   background-repeat: no-repeat;
-  background-position: top 77px right 0px, bottom 665px left 25px, bottom 588px left 40px;
+  background-position: top 77px right 0px, top 770px left 25px, top 822px left 40px, bottom 3367px right 123px, bottom 3298px right 44px, bottom 45px right 150px, bottom 65px right 52px;
 }
 
 .about__title {
@@ -94,15 +95,10 @@ body {
   margin-bottom: 72px;
 }
 
-.about-mob {
-  display: none;
-}
-
 .games {
   display: flex;
   flex-wrap: wrap;
   gap: 32px;
-  padding-bottom: 144px;
 }
 
 .game {
@@ -156,6 +152,81 @@ body {
   margin-top: -32px;
 }
 
+.mini-games {
+  padding-bottom: 144px;
+}
+.mini-games__title {
+  color: #FFFFFF;
+  font-size: 64px;
+  font-weight: 700;
+  padding-top: 94px;
+  padding-bottom: 72px;
+}
+
+.block {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.mini-game {
+  display: flex;
+  flex-wrap: wrap;
+  height: 500px;
+  background-color: #FFFFFF;
+  border-radius: 30px;
+  height: 100%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.mini-game:hover {
+  transform: scale(1.1);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+.mini-game:nth-child(odd) {
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+.mini-game__img {
+  width: 600px;
+}
+.mini-game__name {
+  color: #202027;
+  font-size: 48px;
+  font-weight: 700;
+  padding-left: 48px;
+  padding-top: 48px;
+  padding-bottom: 24px;
+}
+.mini-game__desc {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 32px;
+  color: #202027;
+  padding-left: 48px;
+  padding-bottom: 36px;
+}
+.mini-game__mob-btn {
+  box-sizing: border-box;
+  font: inherit;
+  width: 247px;
+  height: 66px;
+  border-radius: 60px;
+  background-color: #202027;
+  color: #FFFFFF;
+  font-size: 24px;
+  font-weight: 600;
+  cursor: pointer;
+  border: 1px solid #202027;
+  transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+  margin-left: 48px;
+}
+.mini-game__mob-btn:hover {
+  background-color: #FFFFFF;
+  color: #202027;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+}
+
 .footer {
   height: 150px;
   background-color: #E1FF8F;
@@ -190,8 +261,7 @@ body {
   .about {
     display: none;
   }
-  .about-mob {
-    display: block;
+  .mini-games__title {
     font-size: 40px;
     font-weight: 700;
     color: #FFFFFF;
@@ -201,18 +271,26 @@ body {
   .games {
     padding-bottom: 48px;
   }
-  .game {
+  .mini-game {
     width: 343px;
+    height: auto;
   }
-  .game__btn {
-    display: none;
+  .mini-game:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   }
-  .game__desc {
-    display: block;
+  .mini-game:nth-child(odd) {
+    display: flex;
+    flex-direction: row;
   }
-  .game__mob-btn {
-    display: block;
+  .mini-game__img {
+    width: 100%;
+  }
+  .mini-game__mob-btn {
+    margin-left: 29px;
+    margin-bottom: 32px;
     box-sizing: border-box;
+    font: inherit;
     width: 285px;
     height: 55px;
     border-radius: 60px;
@@ -224,25 +302,20 @@ body {
     border: 1px solid #202027;
     transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
   }
-  .game__mob-btn:hover {
+  .mini-game__mob-btn:hover {
     background-color: #FFFFFF;
     color: #202027;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   }
-  .game__name {
+  .mini-game__name {
+    font-size: 32px;
     padding-top: 29px;
     padding-left: 29px;
     padding-bottom: 16px;
   }
-  .game__desc {
+  .mini-game__desc {
+    font-size: 16px;
     padding-left: 29px;
     padding-bottom: 32px;
-  }
-  .game__mob-btn {
-    margin-left: 29px;
-    margin-bottom: 32px;
-  }
-  .game:nth-child(4), .game:nth-child(6) {
-    margin-top: 0px;
   }
 }/*# sourceMappingURL=style.css.map */
