--- a/_vars.scss
+++ b/_vars.scss
@@ -22,6 +22,7 @@ $line-height-very-small: 17px;
 $line-height-small: 19px;
 $line-height-medium: 32px;
 $line-height-big: 39px;
+$line-height-large: 48px;
 $line-height-xlarge: 58px;
 $line-height-xxlarge: 78px;
 
