--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ a {
   text-decoration: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .center {
   padding-left: calc(50% - 600px);
   padding-right: calc(50% - 600px);
@@ -70,9 +74,34 @@ body {
 
 .nav {
   height: 90px;
+  width: 100%;
   background-color: #BCEC30;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+.nav__text {
+  font-size: 30px;
+  font-weight: 700;
+  display: inline-block;
+  animation: nav 10s linear infinite;
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+}
+.nav__img {
+  vertical-align: middle;
+  margin: 0 51px;
 }
 
+@keyframes nav {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-150%);
+  }
+}
 .main {
   background-color: #202027;
   background-image: url(images/Star\ 1.svg), url(images/Star\ 11.svg), url(images/Star\ 12.svg), url(images/Star\ 7.svg), url(images/Star\ 6.svg), url(images/Star\ 10.svg), url(images/Star\ 8.svg);
@@ -253,13 +282,35 @@ body {
     text-align: center;
   }
   .top__title {
+    padding-top: 147px;
     font-size: 40px;
+    line-height: 48px;
+  }
+  .top__subtitle {
+    font-size: 16px;
+    line-height: 19px;
+  }
+  .top__btn {
+    margin-bottom: 131px;
+  }
+  .nav {
+    height: 51px;
+  }
+  .nav__text {
+    font-size: 16px;
+  }
+  .nav__img {
+    width: 19px;
+    height: 19px;
   }
   .main {
     background-image: none;
   }
   .about {
     display: none;
+  }
+  .mini-games {
+    padding-bottom: 48px;
   }
   .mini-games__title {
     font-size: 40px;
@@ -315,6 +366,7 @@ body {
   }
   .mini-game__desc {
     font-size: 16px;
+    line-height: 19px;
     padding-left: 29px;
     padding-bottom: 32px;
   }
